@startuml SET2020
entity CSSProps {
  -id: ObjectID <<generated>>
  --
  name: string
}
entity Components {
  -id: ObjectID <<generated>>
  --
  name: string
  downloadURL: string
  price: string
  iconURL: string
  previewURL: string
  createdAt: Date
  updatedAt: Date
  --
  ~parentID: ObjectID
  ~projectID: ObjectID
}
entity CustomProps {
  -id: ObjectID <<generated>>
  --
  name: string
  value: string
  --
  ~componentID: ObjectID
}
entity ComponentProps {
  value: string
  --
  ~ComponentID: ObjectID
  ~propsID: ObjectID
}
entity Project {
  -id: ObjectID <<generated>>
  --
  name: string
  isPrivate: boolean
  createdAt: Date
  updatedAt: Date
}
entity ProjectUser {
  -id: ObjectID <<generated>>
  --
  ~projectId: ObjectID
  ~userId: ObjectID
}
entity Users {
  -id: ObjectID <<generated>>
  --
  email: string
  password: string
  name: string
  isInactive: boolean
  credit: number
  avatarURL: string
  createdAt: Date
  updatedAt: Date
  --
  ~paymentID: ObjectID
}
entity Payment {
  -id: ObjectID <<generated>>
  --
  type: string
  createdAt: Date
  updatedAt: Date
}
entity Transaction {
  -id: ObjectID <<generated>>
  --
  amount: string
  currency: string
  transactionDate: Date
  --
  ~userId: string
  ~paymentId: string
}
CSSProps||--|{ComponentProps
Components||--|{ComponentProps

CustomProps}|--o|Components

Components||--|{Components

Components||--|{Project
Users||--|{ProjectUser
Project||--|{ProjectUser

Users|o--o{Payment

Users||--||Transaction
Payment||--||Transaction

@enduml